# mini_db

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_main.cpp  results.csv
docs/: architecture.md  benchmark_report.md  demo.md
src/: CMakeLists.txt  main.cpp
src/app/: system_commands.cpp  system_commands.h
src/catalog/: catalog.cpp  catalog.h  catalog_storage.cpp  catalog_storage.h  schema.h
src/execution/: delete_executor.cpp  delete_executor.h  execution_context.h  executor.h  executor_factory.cpp  executor_factory.h  filter.cpp  filter.h  index_scan.cpp  index_scan.h  insert_executor.cpp  insert_executor.h  nested_loop_join.cpp  nested_loop_join.h  projection.h  seq_scan.cpp  seq_scan.h
src/index/: b_plus_tree.cpp  index_manager.h
src/optimizer/: optimizer.cpp  plan_printer.cpp  plan_printer.h
src/recovery/: log_manager.cpp  recovery_actions.cpp  recovery_actions.h  recovery_manager.cpp  recovery_manager.h
src/sql/: binder.cpp
src/storage/: heap_file.cpp  heap_file.h
src/txn/: lock_manager.cpp  txn_manager.cpp  txn_manager.h
tests/: CMakeLists.txt  test_btree.cpp  test_catalog.cpp  test_executor.cpp  test_extension.cpp  test_optimizer.cpp  test_recovery.cpp  test_txn.cpp
